[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Enemy3.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Enemies/Enemy3Projectile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enemy3/AguaVivaV01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy3/AguaVivaV02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy3/AguaVivaV03.png" type="Texture" id=5]
[ext_resource path="res://Cenas/Enemies/Enemy3Death.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "RedJellyFish",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.7372
height = 31.2816

[node name="Enemy3" type="Area2D"]
script = ExtResource( 1 )
enemy_velocity = Vector2( 0, 300 )
projectile = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 1 )
animation = "RedJellyFish"
frame = 2
speed_scale = 0.7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.22778, 4.91095 )
shape = SubResource( 2 )

[node name="Enemy3Death" parent="." instance=ExtResource( 6 )]

[node name="Enemy3ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Enemy3_area_entered"]
[connection signal="timeout" from="Enemy3ShootTimer" to="." method="_on_Enemy3ShootTimer_timeout"]
